--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h1 [ngStyle]="{ color: 'blue' }">Liste des tâches a réaliser .</h1>
 <p>Nous sommes le {{ today | date: "dd/MM/yyyy" }}</p>
 <!-- <h1 [ngClass]="['classe1','classe2']">Liste des tâches a réaliser .</h1> -->
@@ -52,3 +53,4 @@
     </div>
   </li>
 </ul>
+</div>
