--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
-<br>
+<!-- <br>
+<div class="container">
 <my-todo></my-todo>
+</div> -->
+<router-outlet></router-outlet>
